--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sass": "^1.78.0"
